# polyrel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
examples/: client_submit.rs  safe_approval_bundle.rs
src/: auth.rs  call.rs  client.rs  collateral.rs  ctf.rs  erc1155.rs  erc20.rs  error.rs  lib.rs  neg_risk.rs  polymarket.rs  safe.rs  sign.rs  types.rs
src/client/: dto.rs
tests/: deploy_safe.rs
