[package]
name = "polyrel"
version = "0.3.0-alpha"
edition = "2024"
rust-version = "1.95"
description = "Unofficial Polymarket relayer client"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/hubcycle/polyrel"
homepage = "https://github.com/hubcycle/polyrel"
documentation = "https://docs.rs/polyrel"
keywords = ["polymarket", "relayer", "gasless", "ethereum", "polygon"]
categories = ["api-bindings"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
wildcard_imports = "deny"

[features]
default = []
std = ["alloy-primitives/std", "alloy-sol-types/std"]

[dependencies]
alloy-primitives = { version = "1.5", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
bon = { version = "3", default-features = false }

[dev-dependencies]
rstest = "0.26.1"
