[package]
name = "polyrel"
version = "0.3.0-alpha"
edition = "2024"
rust-version = "1.95"
description = "Unofficial Polymarket relayer client"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/hubcycle/polyrel"
homepage = "https://github.com/hubcycle/polyrel"
documentation = "https://docs.rs/polyrel"
keywords = ["polymarket", "relayer", "gasless", "ethereum", "polygon"]
categories = ["api-bindings"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
wildcard_imports = "deny"

[features]
default = ["client"]
std = ["alloy-primitives/std", "alloy-sol-types/std"]
client = ["std", "dep:reqwest", "dep:secrecy", "dep:url"]

[dependencies]
alloy-primitives = { version = "1.5", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
bon = { version = "3", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"], optional = true }
secrecy = { version = "0.10.3", optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5.8", optional = true }

[dev-dependencies]
rstest = "0.26.1"
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
