[package]
name = "polyrel"
version = "0.3.0-alpha"
edition = "2024"
rust-version = "1.95"
description = "Unofficial Polymarket relayer client"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/hubcycle/polyrel"
homepage = "https://github.com/hubcycle/polyrel"
documentation = "https://docs.rs/polyrel"
keywords = ["polymarket", "relayer", "gasless", "ethereum", "polygon"]
categories = ["api-bindings"]

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
wildcard_imports = "deny"

[features]
default = []
std = ["alloy-primitives/std", "alloy-sol-types/std"]
client = ["std", "dep:base64", "dep:hmac", "dep:reqwest", "dep:secrecy", "dep:serde_json", "dep:sha2", "dep:time", "dep:url", "dep:uuid"]

[dependencies]
alloy-primitives = { version = "1.5", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
bon = { version = "3", default-features = false }
hmac = { version = "0.12", default-features = false, optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"], optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
time = { version = "0.3", default-features = false, features = ["parsing"], optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", optional = true }
uuid = { version = "1", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
